--- a/build.gradle
+++ b/build.gradle
@@ -109,7 +109,10 @@ dependencies {
     implementation group: 'com.github.arteam', name: 'simple-json-rpc-client', version: '1.3'
 
     implementation('com.google.guava:guava:29.0-jre')
-    implementation('javax.validation:validation-api:2.0.1.Final')
+   // implementation('javax.validation:validation-api:2.0.1.Final')
+    implementation('org.hibernate.validator:hibernate-validator:8.0.0.Final')
+    implementation 'jakarta.validation:jakarta.validation-api:3.0.0'
+    implementation('org.glassfish:jakarta.el:4.0.2')
 
     implementation("org.web3j:utils:${web3jVersion}")
     implementation("org.web3j:core:${web3jVersion}")
