--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group = 'com.apro.attps'
-version = '0.0.7'
+version = '0.0.8'
 
 repositories {
     mavenCentral()
@@ -99,26 +99,26 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter'
 
     annotationProcessor('org.projectlombok:lombok:1.18.22')
-    implementation 'org.projectlombok:lombok:1.18.22'
+    api 'org.projectlombok:lombok:1.18.22'
 
-    implementation("cn.hutool:hutool-all:5.7.3")
-    implementation("com.squareup.okhttp3:okhttp:4.9.3")
-    implementation 'com.github.mrmike:ok2curl:0.8.0'
-    implementation("com.google.code.gson:gson:2.10.1")
+    api("cn.hutool:hutool-all:5.7.3")
+    api("com.squareup.okhttp3:okhttp:4.9.3")
+    api 'com.github.mrmike:ok2curl:0.8.0'
+    api("com.google.code.gson:gson:2.10.1")
 
-    implementation group: 'com.github.arteam', name: 'simple-json-rpc-client', version: '1.3'
+    api group: 'com.github.arteam', name: 'simple-json-rpc-client', version: '1.3'
 
-    implementation('com.google.guava:guava:29.0-jre')
+    api('com.google.guava:guava:29.0-jre')
    // implementation('javax.validation:validation-api:2.0.1.Final')
-    implementation('org.hibernate.validator:hibernate-validator:8.0.0.Final')
-    implementation 'jakarta.validation:jakarta.validation-api:3.0.0'
-    implementation('org.glassfish:jakarta.el:4.0.2')
+    api('org.hibernate.validator:hibernate-validator:8.0.0.Final')
+    api 'jakarta.validation:jakarta.validation-api:3.0.0'
+    api('org.glassfish:jakarta.el:4.0.2')
 
-    implementation("org.web3j:utils:${web3jVersion}")
-    implementation("org.web3j:core:${web3jVersion}")
-    implementation("org.web3j:tuples:${web3jVersion}")
-    implementation("org.web3j:abi:${web3jVersion}")
-    implementation("org.web3j:crypto:${web3jVersion}")
+    api("org.web3j:utils:${web3jVersion}")
+    api("org.web3j:core:${web3jVersion}")
+    api("org.web3j:tuples:${web3jVersion}")
+    api("org.web3j:abi:${web3jVersion}")
+    api("org.web3j:crypto:${web3jVersion}")
 
 }
 
